# arc-model-similarities-phase-2

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
analysis/: README.md
analysis/data/: wandb_export_2023-09-11T17 18 50.517+01 00.csv
analysis/notebooks/: constants.py  hypothesis1_2.ipynb  hypothesis3.ipynb  hypothesis4.ipynb  plotting_functions.py  preprocessing.py  viewing_embeddings.ipynb  viewing_images.ipynb  viewing_pixel_values.ipynb
analysis/scripts/: create_data.py
configs/: attack.yaml  datasets.yaml  dmpair_kwargs.yaml  metrics.yaml  trainer.yaml  transforms.yaml
configs/experiment_groups/: big-blur.yaml  drop-only.yaml  extra-drop-only.yaml  grayscale.yaml  little-blur.yaml  rotate-180.yaml
configs/metrics/: debug_mmd_laplace.yaml  debug_mmd_rbf.yaml  debug_otdd_approx.yaml  debug_otdd_exact.yaml  inception.yaml  kde.yaml  mmd.yaml  mmd_embed.yaml  mmd_raw.yaml  otdd.yaml  pad.yaml
scripts/: README.md  attack.py  calculate_metrics.py  constants.py  generate_attack_scripts.py  generate_metrics_scripts.py  generate_train_scripts.py  make_report_tables.py  metrics_script.py  shell_metrics_all.sh  slurm_attack_all.sh  slurm_metrics_all.sh  slurm_train_all.sh  train_all.sh  train_models.py  utils.py
scripts/templates/: slurm-attack-template.sh  slurm-metrics-template.sh  slurm-train-template.sh  train-template.sh
src/modsim2/attack/: __init__.py  adversarial_images.py  attack.py  metrics.py  transfer.py
src/modsim2/data/: loader.py
src/modsim2/model/: load_model.py  resnet.py  utils.py  wandb_logger.py
src/modsim2/similarity/: constants.py  embeddings.py  metrics.py  mmd.py  ot.py
src/modsim2/similarity/metrics/: kde.py  metrics.py  mmd.py  otdd.py  pad.py
src/modsim2/utils/: accelerator.py  config.py
tests/: conftest.py  test_adversarial_images.py  test_attack_metrics.py  test_data.py  test_embeddings.py  test_kde.py  test_mmd.py  test_model.py  test_ot.py  test_otdd.py  test_pad.py  test_similarity.py  test_transfer_metrics.py  test_utils.py  testing_constants.py  testing_utils.py
tests/testconfig/: metrics.yaml  transforms.yaml
tests/testdata/: README.md
tests/testdata/dummy_cifar/: test.pt  training.pt
