[tool.poetry]
name = "arc-model-similarities-phase-2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "modsim2", from="src"}]

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^2.20.0"
pytest = "^7.2.0"
pytorch-lightning = "^1.8.3.post1"
lightning-bolts = "^0.6.0.post1"
scikit-learn = "^1.1.3"
torch = "^1.13.1"
torchvision = "^0.14.1"
wandb = "^0.13.10"
jinja2 = "^3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    "src",
]
filterwarnings = [
    "ignore::pl_bolts.utils.stability.UnderReviewWarning",
]

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
